--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 DB_HOST = mongodb+srv://Marina_L:1239875@cluster0.3ctgn.mongodb.net/db-contacts?retryWrites=true&w=majority
+SECRET_KEY=GHGSDFM23Tfgsfs3
