--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 DB_HOST = mongodb+srv://Marina_L:1239875@cluster0.3ctgn.mongodb.net/db-contacts?retryWrites=true&w=majority
-SECRET_KEY=GHGSDFM23Tfgsfs3
+SECRET_KEY=YKDSDCRH521dwXH55P
+DB_USER=Marina_L
+DB_PASSWORD=1239875
+DB_NAME=db_contacts
