--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-DB_HOST = mongodb+srv://Marina_L:1239875@cluster0.3ctgn.mongodb.net/db-contacts?retryWrites=true&w=majority
+DB_HOST=mongodb+srv://Marina_L:1239875@cluster0.3ctgn.mongodb.net/db-contacts?retryWrites=true&w=majority
 SECRET_KEY=YKDSDCRH521dwXH55P
 DB_USER=Marina_L
 DB_PASSWORD=1239875
 DB_NAME=db_contacts
+SENDGRID_API_KEY=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
